--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -9,6 +9,9 @@ header{
     height: 80px;
     width: 100%;
     // overflow: visible;
+    @include rp(tl) {
+      display: none;
+    }
     &-list{
       display: flex;
       list-style-type: none;
@@ -16,6 +19,7 @@ header{
       position: relative;
       height: 100%;
       align-items: center;
+      
       .logo{
         position: absolute;
         top: 0;
@@ -34,8 +38,143 @@ header{
     &-items{
       &>*{
         @include size(body1);
-        @include bold;
+        @include semi-bold;
         color: map-get($color , text5 );
+        @include rp(ps){
+          font-size: 1.6rem;
+        }
+      }
+    }
+    
+  }
+  .header-mobile{
+    display: none;
+    height: 80px;
+    width: 100%;
+    position: relative;
+    @include rp(tl) {
+      display: flex;
+      justify-content: space-between;
+      padding: 0px 8px;
+    }
+    .logo-mobile{
+      height: 100%;
+      display: inline-block;
+      padding: 4px;
+      // &-link{
+      //   display: flex;
+      //   justify-content: center;
+      // }
+      img{
+        object-fit: contain;
+        object-position: left;
+      }
+    }
+    .header__button {
+      width: 42px;
+      height: 100%;
+      border-radius: 3px;
+
+      // background-color: rgba(map-get($color, base), 0.4);
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      cursor: pointer;
+
+      @include rp(tl) {
+        display: flex;
+      }
+
+      &-border {
+
+        width: 80%;
+        height: 2px;
+        border-radius: 1px;
+        background-color: map-get($color, main);
+        transition: 0.3s all ease;
+
+        position: relative;
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          top: -12px;
+          left: 0;
+          bottom: initial;
+          right: initial;
+          width: 100%;
+          height: 2px;
+          background-color: map-get($color, main);
+
+          transition: 0.3s all ease;
+        }
+
+        &::after {
+          top: initial;
+          bottom: -12px;
+        }
+      }
+      display: none;
+      // &.show {
+      //   display: inherit;
+      // }
+      &.active {
+        .header__button-border {
+          height: 0;
+          background-color: transparent;
+
+          &::before,
+          &::after {
+            top: 50%;
+            bottom: initial;
+            width: 100%;
+          }
+          &::before {
+            transform: translateY(-50%) rotate(45deg);
+          }
+          &::after {
+            transform: translateY(-50%) rotate(-45deg);
+          }
+        }
+      }
+    }
+    &-list{
+      transition: animation 0.3s ease;
+      background-color: map-get($color , bg );
+      box-shadow: 0px 3px 6px rgba(0,0,0,.16);
+      display: none;
+      list-style-type: none; 
+      justify-content: center;
+      flex-wrap: wrap;
+      position: absolute;
+      top: calc(0% + 80px);
+      right: 0;
+      width: 100%;
+      padding: 10px 0;
+      &.show{
+        display: flex;
+        animation: fadeRightTo .3s ease forwards;
+      }
+      @include rp(mx){
+        flex-wrap: initial;
+        flex-direction: column;
+        justify-content: initial;
+        height: 100vh;
+        overflow: auto;
+      }
+    }
+    &-items{
+      padding: 10px 20px;
+      flex: 0 0 33.3333%;
+      @include rp(mx){
+        flex: initial;
+      }
+      &>*{
+        @include size(body1);
+        @include semi-bold;
+        color: map-get($color , sub1 );
       }
     }
   }
