--- a/src/_templates/_layout/_layout.pug
+++ b/src/_templates/_layout/_layout.pug
@@ -33,9 +33,9 @@ html(lang="en")
 		//- include scripts
 		//- script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
 		//- script(type="text/javascript", src="https://maps.googleapis.com/maps/api/js?&libraries=places&key=AIzaSyCHvmyTralDp2Y0m7zEiN185u1vtArcC5s&callback=initMap")
-		script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHvmyTralDp2Y0m7zEiN185u1vtArcC5s")
+		//- script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHvmyTralDp2Y0m7zEiN185u1vtArcC5s")
 		//- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-		script(src="https://unpkg.com/aos@2.3.1/dist/aos.js")
+		//- script(src="https://unpkg.com/aos@2.3.1/dist/aos.js")
 		script(type="text/javascript", src="./js/core.min.js")
 		script(type="text/javascript", src="./js/main.min.js")
 
