--- a/src/members.pug
+++ b/src/members.pug
@@ -12,5 +12,7 @@ block main
 	div(id="membersPage")
 		include _templates/members/m-1
 		include _templates/members/m-2
-
+		include _templates/_layout/_360deg.pug
+		include _templates/_layout/_popup.pug
+    
 block scripts
