--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -13,7 +13,7 @@ header
                     a(href="#") Hằng ngày của con 
                 li.header-items.column-2
                 li.header-items
-                    a(href="#") Thành viên của làng
+                    a(href="./members.html") Thành viên của làng
                 li.header-items
                     a(href="#") Đồng hành cùng con 
                 li.header-items
