--- a/src/styles/pages/story/s-1.scss
+++ b/src/styles/pages/story/s-1.scss
@@ -58,13 +58,13 @@
                 }
                 &_infor{
                     @include shadow(s1);
-                    border-radius:  30px 0 30px 0;
+                    border-radius: 30px 0 30px 0;
                     height: 100%;
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
-                    padding: 0 67px ;
+                    padding: 52px 67px;
                     &>*:not(:last-child){
                         margin-bottom: 10px;
                     }
