phu add space story page

--- a/src/_templates/story/s-2.pug
+++ b/src/_templates/story/s-2.pug
@@ -2,6 +2,9 @@ section#story-2
     .container
         .story-2--wrapper
             .story-2--wrapper__title
+                each tit in ['1']
+                    - let title = "Những tấm gương hoàn cảnh khó khăn hiếu học vươn lên của các con ở làng";
+                    include ../_layout/title.pug
             .story-2--wrapper__content 
                 .nav-custom
                     .swiper-container.MyPerson
@@ -9,55 +12,55 @@ section#story-2
                             .swiper-slide
                                 .story-2--wrapper__content-items
                                     .story-2--wrapper__content-items_img
-                                        img(src="./assets/page/story/person-1.png", alt="")
+                                        img(src="./assets/_page/story/person-1.png", alt="")
                                     .story-2--wrapper__content-items_name
                                         p Nguyễn Thị A 
                                         .story-2--wrapper__content-items_name-hoverImg
-                                            img(src="./assets/page/story/person-1.png", alt="")
+                                            img(src="./assets/_page/story/person-1.png", alt="")
                                     .story-2--wrapper__content-items_hoverInfor
                                         .name Nguyễn Thị A
                                         .infor It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English.
                             .swiper-slide
                                 .story-2--wrapper__content-items
                                     .story-2--wrapper__content-items_img
-                                        img(src="./assets/page/story/person-2.png", alt="")
+                                        img(src="./assets/_page/story/person-2.png", alt="")
                                     .story-2--wrapper__content-items_name
                                         p Nguyễn Thị A 
                                         .story-2--wrapper__content-items_name-hoverImg
-                                            img(src="./assets/page/story/person-2.png", alt="")
+                                            img(src="./assets/_page/story/person-2.png", alt="")
                                     .story-2--wrapper__content-items_hoverInfor
                                         .name Nguyễn Thị A
                                         .infor It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English.
                             .swiper-slide
                                 .story-2--wrapper__content-items
                                     .story-2--wrapper__content-items_img
-                                        img(src="./assets/page/story/person-1.png", alt="")
+                                        img(src="./assets/_page/story/person-1.png", alt="")
                                     .story-2--wrapper__content-items_name
                                         p Nguyễn Thị A 
                                         .story-2--wrapper__content-items_name-hoverImg
-                                            img(src="./assets/page/story/person-1.png", alt="")
+                                            img(src="./assets/_page/story/person-1.png", alt="")
                                     .story-2--wrapper__content-items_hoverInfor
                                         .name Nguyễn Thị A
                                         .infor It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English.
                             .swiper-slide
                                 .story-2--wrapper__content-items
                                     .story-2--wrapper__content-items_img
-                                        img(src="./assets/page/story/person-1.png", alt="")
+                                        img(src="./assets/_page/story/person-1.png", alt="")
                                     .story-2--wrapper__content-items_name
                                         p Nguyễn Thị A 
                                         .story-2--wrapper__content-items_name-hoverImg
-                                            img(src="./assets/page/story/person-1.png", alt="")
+                                            img(src="./assets/_page/story/person-1.png", alt="")
                                     .story-2--wrapper__content-items_hoverInfor
                                         .name Nguyễn Thị A
                                         .infor It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English.
                             .swiper-slide
                                 .story-2--wrapper__content-items
                                     .story-2--wrapper__content-items_img
-                                        img(src="./assets/page/story/person-1.png", alt="")
+                                        img(src="./assets/_page/story/person-1.png", alt="")
                                     .story-2--wrapper__content-items_name
                                         p Nguyễn Thị A 
                                         .story-2--wrapper__content-items_name-hoverImg
-                                            img(src="./assets/page/story/person-1.png", alt="")
+                                            img(src="./assets/_page/story/person-1.png", alt="")
                                     .story-2--wrapper__content-items_hoverInfor
                                         .name Nguyễn Thị A
                                         .infor It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English. 'Content here, content here',making it look like readable English.
