--- a/src/styles/pages/story/s-2.scss
+++ b/src/styles/pages/story/s-2.scss
@@ -2,13 +2,15 @@
     background-color:rgba(#94F7BC, .36);
     .story-2--wrapper{
         width: 100%;
-        // padding: 70px 0;
         @include section(s70, margin-top);
         @include section(s70, margin-bottom);
+        display: flex;
+        flex-direction: column;
         @include rp(ts){
             padding: 30px 0;
         }
         &__title{
+            @include section(s70, margin-bottom);
             width: 100%;
             text-align: center;
         }
