--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,6 +28,7 @@
 @import "layout/title";
 @import "layout/360deg";
 @import "layout/popup";
+@import "layout/box-1";
 
 // page
 @import "pages/index/style";
