--- a/src/styles/pages/index/i-4.scss
+++ b/src/styles/pages/index/i-4.scss
@@ -1,3 +1,8 @@
 .index-4{
     @include section(s70, padding-top);
+    &__wrapper{
+        .column{
+            width: 100%;
+        }
+    }
 }
