--- a/src/members.pug
+++ b/src/members.pug
@@ -1,7 +1,7 @@
 extends _templates/_layout/_layout.pug
 
 block var
-	- let title = 'Members';
+	- let title = 'Thành viên của làng';
 	- let bodyClass = 'members-page';
 	- let bannerSub = "bannerSub";
 	- let imgBanner = {};
