--- a/src/story.pug
+++ b/src/story.pug
@@ -1,13 +1,13 @@
 extends _templates/_layout/_layout.pug
 
 block var
-	- let title = 'Page | Index';
-	- let bodyClass = 'index-page';
-	- let indexFooter = "indexfooter";
+	- let title = 'Chuyện về làng';
+	- let bodyClass = 'story-page';
+	//- - let indexFooter = "indexfooter";
 	- let bannerSub = "bannerSub";
 	- let imgBanner = {};
-	- imgBanner.src = "./assets/_page/story/banner.png"
-	- let pageName = "Chuyện về làng"
+	- imgBanner.src = "./assets/_page/story/banner.png";
+	- let pageName = "Chuyện về làng";
 
 block main
 	div(id="indexPage")
