--- a/src/village.pug
+++ b/src/village.pug
@@ -1,8 +1,12 @@
 extends _templates/_layout/_layout.pug
 
 block var
-	- let title = 'Village';
+	- let title = 'Làng của con';
 	- let bodyClass = 'village-page';
+	- let bannerSub = "bannerSub";
+	- let imgBanner = {};
+	- imgBanner.src = "./assets/_page/village/banner.png";
+	- let pageName = "Làng của con";
 
 block main
 	div(id="villagePage")
