--- a/src/_templates/_layout/_header.pug
+++ b/src/_templates/_layout/_header.pug
@@ -15,7 +15,7 @@ header#header
                 li.header-items
                     a(href="./members.html") Thành viên của làng
                 li.header-items
-                    a(href="#") Đồng hành cùng con 
+                    a(href="./companion.html") Đồng hành cùng con 
                 li.header-items
                     a(href="#")  Liên hệ 
             
@@ -33,7 +33,7 @@ header#header
             li.header-mobile-items
                 a(href="./members.html") Thành viên của làng
             li.header-mobile-items
-                a(href="#") Đồng hành cùng con 
+                a(href="./companion.html") Đồng hành cùng con 
             li.header-mobile-items
                 a(href="#")  Liên hệ 
         .header__button
