--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,9 @@
 extends _templates/_layout/_layout.pug
 
 block var
-	- let title = 'Page | Index';
+	- let title = 'Trang chủ';
 	- let bodyClass = 'index-page';
-	- let indexFooter = "indexfooter";
+	//- - let indexFooter = "indexfooter";
 	- let bannerIndex = "bannerIndex";
 
 block main
