fix day month yeả

--- a/src/_templates/_layout/_box-1.pug
+++ b/src/_templates/_layout/_box-1.pug
@@ -4,13 +4,12 @@
             img(src="./assets/_page/index/index4-1.png", alt="")
         .box-1__infor 
             .box-1__infor--time 
-                .flex
-                    .day 
-                        p 09
-                    .month 
-                        p 01
+                .day 
+                    span 09
+                .month 
+                    span 01
                 .year 
-                    p 2017
+                    span 2017
             .box-1__infor--title 
                 h2 Làng Hy Vọng TP Đà Nẵng – Khởi đầu Hành trình...
             .box-1__infor--desc 
