--- a/src/styles/layout/_box-1.scss
+++ b/src/styles/layout/_box-1.scss
@@ -1,12 +1,12 @@
 .box-1{
-
+    background: map-get($color , bg );
     &__content{
        
     }
     &__img{
         position: relative;
         width: 100%;
-        padding-top: 100%;
+        padding-top: 90%;
         img{
             position: absolute;
             top: 0%;
@@ -21,6 +21,9 @@
     &__infor{
         box-shadow: 0px 3px 6px rgba(0,0,0,.16);
         padding: 60px 20px;
+        @include rp(pm){
+            padding: 50px 10px;
+        }
         position: relative;
         &::after{
             position: absolute;
@@ -40,7 +43,7 @@
             background: map-get($color , bg);
             border: 2px solid map-get($color, main );
             border-radius: 100%;
-            z-index: 1;
+            z-index: 2;
             display: flex;
             flex-direction: column;
             align-items: center;
