--- a/src/_templates/_layout/_box-1.pug
+++ b/src/_templates/_layout/_box-1.pug
@@ -3,7 +3,7 @@
         .box-1__img 
             img(src="./assets/_page/index/index4-1.png", alt="")
         .box-1__infor 
-            .box-1__infor--time 
+            .time-post 
                 .day 
                     span 09
                 .month 
