--- a/src/styles/layout/_box-1.scss
+++ b/src/styles/layout/_box-1.scss
@@ -18,7 +18,8 @@
 
     &__infor {
         box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
-        padding: 60px 20px;
+        padding: 60px 20px 42px 20px;
+
         position: relative;
         &::after {
             position: absolute;
@@ -28,80 +29,6 @@
             width: 100%;
             height: 4px;
             background: map-get($color, main);
-        }
-        &--time {
-            position: absolute;
-            top: 0;
-            right: calc(0% + 40px);
-            width: 82px;
-            height: 82px;
-            transform: translateY(-50%);
-
-            background: map-get($color, bg);
-            border: 2px solid map-get($color, main);
-            border-radius: 100%;
-            z-index: 1;
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-            &::before,
-            &::after {
-                content: "";
-                position: absolute;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                background: map-get($color, line1);
-            }
-
-            &::after {
-                top: 50%;
-                width: 2px;
-                height: 25%;
-
-                transform: translate(-50%, -100%);
-            }
-
-            &::before {
-                top: 50%;
-                width: 100%;
-                height: 2px;
-            }
-
-            .day, .month, .year{
-                position: absolute;
-                top: auto;
-                left: auto;
-                top: 50%;
-                left: 50%;
-
-                transform: translate(-50%, -50%);
-                & > * {
-                    @include size(body2);
-                    color: map-get($color, line1);
-                    line-height: 1.2;
-                    @include regular;
-                }
-            }
-
-            .day {
-                transform: translateX(calc(-100% - 6px)) translateY(-100%);
-                text-align: right;
-            }
-            .month {
-                transform: translateX(6px) translateY(-100%);
-                text-align: left;
-            }
-
-            .year {
-                transform: translateX(-50%) translateY(6px);
-                text-align: center;
-                
-                &>*{
-                    letter-spacing: 1.8px;
-                }
-            }
         }
         &--title {
             & > * {
@@ -121,6 +48,82 @@
                 line-height: 1.2;
                 @include regular;
             }
+        }
+    }
+}
+
+.time-post {
+    position: absolute;
+    top: 0;
+    right: calc(0% + 40px);
+    width: 82px;
+    height: 82px;
+    transform: translateY(-50%);
+
+    background: map-get($color, bg);
+    border: 2px solid map-get($color, main);
+    border-radius: 100%;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: map-get($color, line1);
+    }
+
+    &::after {
+        top: 50%;
+        width: 2px;
+        height: 25%;
+
+        transform: translate(-50%, -100%);
+    }
+
+    &::before {
+        top: 50%;
+        width: 60%;
+        height: 2px;
+    }
+
+    .day, .month, .year{
+        position: absolute;
+        top: auto;
+        left: auto;
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+        & > * {
+            @include size(body2);
+            color: map-get($color, line1);
+            line-height: 1.2;
+            @include regular;
+        }
+    }
+
+    .day {
+        transform: translateX(calc(-100% - 6px)) translateY(-100%);
+        text-align: right;
+    }
+    .month {
+        transform: translateX(6px) translateY(-100%);
+        text-align: left;
+    }
+
+    .year {
+        transform: translateX(-50%) translateY(6px);
+        text-align: center;
+        
+        &>*{
+            letter-spacing: 1.8px;
         }
     }
 }
