--- a/src/_templates/index/i-4.pug
+++ b/src/_templates/index/i-4.pug
@@ -18,7 +18,7 @@ section#index-4
                                     - let year = val[3];
                                     - let title = val[4];
                                     - let desc = val[5];
-                                    .index4__content 
+                                    a(href="#").index4__content 
                                         include ../_layout/_box-1.pug
                             .swiper-slide
                                 each val in arrIndex4
@@ -28,7 +28,7 @@ section#index-4
                                     - let year = val[3];
                                     - let title = val[4];
                                     - let desc = val[5];
-                                    .index4__content 
+                                    a(href="#").index4__content 
                                         include ../_layout/_box-1.pug
                             .swiper-slide
                                 each val in arrIndex4
@@ -38,7 +38,7 @@ section#index-4
                                     - let year = val[3];
                                     - let title = val[4];
                                     - let desc = val[5];
-                                    .index4__content 
+                                    a(href="#").index4__content 
                                         include ../_layout/_box-1.pug
                             .swiper-slide
                                 each val in arrIndex4
@@ -48,7 +48,7 @@ section#index-4
                                     - let year = val[3];
                                     - let title = val[4];
                                     - let desc = val[5];
-                                    .index4__content 
+                                    a(href="#").index4__content 
                                         include ../_layout/_box-1.pug
                     .swiper-button-next
                         <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 18.121 33.414">
