--- a/src/styles/pages/index/i-4.scss
+++ b/src/styles/pages/index/i-4.scss
@@ -11,4 +11,20 @@
         justify-content: center;
         @include spaceIndex4(s45, margin-bottom);
     }
+    .nav-custom{
+        .index4__content{
+            .box-1{
+                &__infor {
+                    &--title {
+                        &:hover{
+                            &>*{
+                                color:map-get($color , sub1 );
+                            }
+                            
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
