--- a/src/_templates/news/n-1.pug
+++ b/src/_templates/news/n-1.pug
@@ -35,8 +35,16 @@ section#news1
             p Đồng hành trong sự kiện này, còn có sự hiện diện và chung tay của các đơn vị tài trợ khác, như đại diện hãng sơn Nippon Việt Nam, Ngân hàng Quốc dân, Hệ thống cầm đồ thân thiện T99, Công ty Cổ phần Mekong One, T99 Land, Tập đoàn FLG, Tập đoàn Vicoland… Tấm lòng của các mạnh thường quân sẽ giúp đỡ cho các con ở Làng Hy Vọng có cuộc sống sinh hoạt và học tập no ấm, đầy đủ hơn.
 
         .news1-sample.column-4.margin-left-auto.column-12-tm
-          each newsVal in ['1', '2']
-            .news1-sample__item 
-              include ../_layout/_box-1.pug
+          - let arrIndex4 = [["./assets/_page/index/index4-1.png","09","01","2017","Làng Hy Vọng TP Đà Nẵng – Khởi đầu Hành trình...","Cùng với gần 400 hoạt động xã hội, trách nhiệm chăm sóc sức khỏe cộng đồng mỗi năm, “hành trình 20 điểm yêu thương” năm nay sẽ là chuỗi hoạt động xuyên suốt."],["./assets/_page/index/index4-1.png","09","01","2017","Làng Hy Vọng TP Đà Nẵng – Khởi đầu Hành trình...","Cùng với gần 400 hoạt động xã hội, trách nhiệm chăm sóc sức khỏe cộng đồng mỗi năm, “hành trình 20 điểm yêu thương” năm nay sẽ là chuỗi hoạt động xuyên suốt."]]
+          each val in arrIndex4 
+              - let img = val[0];
+              - let day = val[1];
+              - let month = val[2];
+              - let year = val[3];
+              - let title = val[4];
+              - let desc = val[5];
+              .news1-sample__item
+                a(href="#") 
+                  include ../_layout/_box-1.pug
 
 
