--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -31,7 +31,25 @@ header{
         z-index: 9999;
         &-link{
           width: 80%;
-          display: block;
+          display: flex;
+          justify-content: center;
+          &::after{
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            background: map-get($color , bg);
+            border-radius: 100%;
+            width: 160px;
+            height: 160px;
+            z-index: -1;
+            transform: translate(-50%, -50%);
+          }
+          img{
+            object-fit: contain;
+            width: 150px;
+            height: 150px;
+          }
         }
       }
     }
