--- a/src/styles/pages/daily/d-3.scss
+++ b/src/styles/pages/daily/d-3.scss
@@ -1,12 +1,14 @@
 #daily-3{
     .daily-3{
+        @include section(s70, margin-bottom);
+        @include section(s70, margin-top);
         &__wrapper{
             width: 100%;
             margin: auto;
             &--title{
                 width: 100%;
                 text-align: center;
-                @include section(s70, margin-bottom);
+                @include section(s48, margin-bottom);
             }
             &--swiper{
                 .daily-3__slide{
@@ -20,7 +22,7 @@
                         left: 0;
                         right: 0;
                         bottom: 0;
-                    
+                        z-index: 1;
                     }
                     &:hover{
                         .daily-3__slide-infor{
@@ -34,6 +36,7 @@
                         left: 0;
                         right: 0;
                         bottom: 0;
+                        z-index: -1;
                     }
                     &-infor{
                         position: absolute;
@@ -44,6 +47,9 @@
                         background-color: map-get($color, main );
                         border-top-left-radius: 30px;
                         padding: 15px 0;
+                        @include rp(mx){
+                            padding: 10px 0;
+                        }
                         @include title(sub);
                         color: white;
                         transition: .3s ease-in-out;
